# PerMan

./: .env  Cargo.toml  Dioxus.toml  Perman.db
assets/: main.css
migrations/: 01_init.sql  02_init.sql
src/: main.rs  mod.rs
src/backend/: db.rs  mod.rs
src/backend/models/: abo.rs  benutzer.rs  buchung.rs  kosten.rs  mod.rs  periode.rs  typ.rs
src/backend/server_functions/: abo_fns.rs  benutzer_fns.rs  buchung_fns.rs  kosten_fns.rs  mod.rs  periode_fns.rs
src/components/: add_abo.rs  add_buchung.rs  add_kosten.rs  add_periode.rs  app_layout.rs  delete_buchung.rs  delete_kosten.rs  delete_periode.rs  header.rs  home.rs  jahresuebersicht.rs  list_abo.rs  liste_buchung.rs  liste_buchung_einahmen.rs  liste_kosten.rs  liste_periode.rs  loggin.rs  login.rs  mod.rs  nav.rs  register.rs
src/icons/: mdi_light.rs  mod.rs
