[package]
name = "per-man"
version = "0.1.0"
authors = ["hatem.benbelgacem@outlook.com <hatem.benbelgacem@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version ="0.4.42", features = ["serde"]}
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version="0.8.3", features = [ "sqlite", "runtime-tokio", "chrono" ], optional = true}

tokio = { version = "1.48.0", features = ["full"], optional = true }
icons = { version = "0.X", features = ["dioxus"] }
num-format = "0.4"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "sqlx", "dep:tokio"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

